MODON MRE BPDEV/force-app/main/default/objects/Process_Checklist__c/Process_Checklist__c.object-meta.xml
<CustomObject>
    <label>Process Checklist</label>
    <nameField>
        <displayFormat>PC-{0000}</displayFormat>
        <label>Process Checklist Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Process Checklist</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>