MODON MRE BPDEV/force-app/main/default/objects/Process_Checklist__c/fields/Checklist_Metadata__c.field-meta.xml
<CustomField>
    <fullName>Checklist_Metadata__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Checklist Metadata</label>
    <referenceTo>Checklist_Metadata__c</referenceTo>
    <relationshipLabel>Process Checklist</relationshipLabel>
    <relationshipName>Process_Checklist</relationshipName>
    <type>Lookup</type>
</CustomField>