MODON MRE BPDEV/force-app/main/default/objects/Process_Checklist__c/fields/Is_Maker_Review_Completed__c.field-meta.xml
<CustomField>
    <fullName>Is_Maker_Review_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Maker Review Completed</label>
    <type>Checkbox</type>
</CustomField>