MODON MRE BPDEV/force-app/main/default/objects/Process_Checklist__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>